@@ -1,5 +1,5 @@
 {- arch-tag: FTP client support
-Copyright (C) 2004 John Goerzen <jgoerzen@complete.org>
+Copyright (C) 2004-2005 John Goerzen <jgoerzen@complete.org>
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 {- |
    Module     : MissingH.Network.FTP.Client
-   Copyright  : Copyright (C) 2004 John Goerzen
+   Copyright  : Copyright (C) 2004-2005 John Goerzen
    License    : GNU GPL, version 2 or above
 
    Maintainer : John Goerzen, 
@@ -225,6 +225,7 @@ where
 import MissingH.Network.FTP.ParserClient
 import Network.BSD
 import Network.Socket
+import MissingH.IO.Binary
 import qualified Network
 import System.IO
 import System.IO.Unsafe
@@ -440,13 +441,13 @@ putbinary h fn input = storbinary h ("STOR " ++ fn) input
 
 {- | Uploads a file from disk in binary mode. Note: filename is used for both local and remote. -}
 uploadbinary :: FTPConnection -> String -> IO FTPResult
-uploadbinary h fn = do input <- readFile fn
+uploadbinary h fn = do input <- readBinaryFile fn
                        putbinary h fn input
 
 {- | Downloads a file from remote and saves to disk in binary mode.  Note: filename is used for both local and remote. -}
 downloadbinary :: FTPConnection -> String -> IO FTPResult
 downloadbinary h fn = do r <- getbinary h fn
-                         writeFile fn (fst r)
+                         writeBinaryFile fn (fst r)
                          return (snd r)
 
 {- | Retrieves a list of files in the given directory. 
